assetsdir = $(datadir)/themes/Adwaita/gtk-3.0/assets
assets_DATA = 		\
	checkbox-checked.svg \
	checkbox-checked-dark.svg \
	checkbox-checked-insensitive.svg \
	checkbox-checked-insensitive-dark.svg \
	checkbox-unchecked.svg \
	checkbox-unchecked-dark.svg \
	checkbox-unchecked-insensitive.svg \
	checkbox-unchecked-insensitive-dark.svg \
	checkbox-mixed.svg \
	checkbox-mixed-dark.svg \
	radio-selected.svg \
	radio-selected-dark.svg \
	radio-selected-insensitive.svg \
	radio-selected-insensitive-dark.svg \
	radio-unselected.svg \
	radio-unselected-dark.svg \
	radio-unselected-insensitive.svg \
	radio-unselected-insensitive-dark.svg \
	radio-mixed.svg \
	radio-mixed-dark.svg

EXTRA_DIST = $(assets_DATA)