assets =			\
	scale-slider.svg	\
	scale-slider-active.svg \
	radio.svg		\
	radio-selected.svg	\
	radio-active.svg	\
	radio-active-selected.svg	\
	checkbox-unchecked.svg		\
	checkbox-unchecked-selected.svg	\
	checkbox-checked.svg		\
	checkbox-checked-selected.svg   \
	cursor-handle-insert.svg	\
	cursor-handle-bottom.svg	\
	cursor-handle-top.svg


sugar72dir = $(datadir)/themes/sugar-72/gtk-3.0/assets
sugar100dir = $(datadir)/themes/sugar-100/gtk-3.0/assets

dist_sugar72_DATA = $(assets)
dist_sugar100_DATA = $(assets)
