SUBDIRS = 100 72

assets =			\
	radio.svg		\
	radio-selected.svg	\
	radio-active.svg	\
	radio-active-selected.svg	\
	cursor-handle-insertion.svg	\
	cursor-handle-bottom.svg	\
	cursor-handle-top.svg


sugar72dir = $(datadir)/themes/sugar-72/gtk-3.0/assets
sugar100dir = $(datadir)/themes/sugar-100/gtk-3.0/assets

dist_sugar72_DATA = $(assets)
dist_sugar100_DATA = $(assets)
