iconsize=scalable
category=actions
icondir = $(datadir)/icons/sugar/$(iconsize)/$(category)

icon_DATA =					\
	activity-stop.svg			\
	cell-format.svg				\
	cell-height.svg				\
	cell-size.svg				\
	cell-width.svg				\
	column-insert.svg			\
	column-remove.svg			\
	document-save.svg			\
	dialog-cancel.svg			\
	dialog-ok.svg				\
	edit-copy.svg				\
	edit-paste.svg				\
	edit-redo.svg				\
	edit-undo.svg				\
	format-columns-double.svg		\
	format-columns-single.svg		\
	format-columns-triple.svg		\
	format-justify-center.svg		\
	format-justify-fill.svg			\
	format-justify-left.svg			\
	format-justify-right.svg		\
	format-text-bold.svg			\
	format-text-italic.svg			\
	format-text-leading.svg			\
	format-text-size.svg			\
	format-text-underline.svg		\
	go-left.svg				\
	go-right.svg				\
	go-next.svg				\
	go-next-paired.svg			\
	go-previous.svg				\
	go-previous-paired.svg			\
	insert-image.svg			\
	insert-table.svg			\
	invite.svg				\
	list-add.svg				\
	list-remove.svg				\
	media-eject-insensitive.svg		\
	media-eject-pressed.svg			\
	media-eject.svg				\
	media-playback-pause-insensitive.svg	\
	media-playback-pause-pressed.svg	\
	media-playback-pause.svg		\
	media-playback-start-insensitive.svg	\
	media-playback-start-pressed.svg	\
	media-playback-start.svg		\
	media-playback-stop-insensitive.svg	\
	media-playback-stop-pressed.svg		\
	media-playback-stop.svg			\
	media-playlist-repeat.svg		\
	media-playlist-shuffle.svg		\
	media-record-insensitive.svg		\
	media-record-pressed.svg		\
	media-record.svg			\
	media-seek-backward-insensitive.svg	\
	media-seek-backward-pressed.svg		\
	media-seek-backward.svg			\
	media-seek-forward-insensitive.svg	\
	media-seek-forward-pressed.svg		\
	media-seek-forward.svg			\
	row-insert.svg				\
	row-remove.svg				\
	system-search.svg			\
	view-refresh.svg			\
	zoom-activity.svg 			\
	zoom-best-fit.svg			\
	zoom-home.svg				\
	zoom-groups.svg			\
	zoom-in.svg				\
	zoom-neighborhood.svg		\
	zoom-out.svg

EXTRA_DIST = $(icon_DATA)
