iconsize=scalable
category=device
icondir = $(datadir)/icons/sugar/$(iconsize)/$(category)

icon_DATA =					\
	battery-000.icon		\
	battery-000.svg			\
	battery-010.icon		\
	battery-010.svg			\
	battery-020.icon		\
	battery-020.svg			\
	battery-030.icon		\
	battery-030.svg			\
	battery-040.icon		\
	battery-040.svg			\
	battery-050.icon		\
	battery-050.svg			\
	battery-060.icon		\
	battery-060.svg			\
	battery-070.icon		\
	battery-070.svg			\
	battery-080.icon		\
	battery-080.svg			\
	battery-090.icon		\
	battery-090.svg			\
	battery-100.icon		\
	battery-100.svg			\
	computer-xo.svg			\
	network-mesh.svg		\
	network-mesh.icon		\
	network-wired.svg		\
	network-wireless-000.svg	\
	network-wireless-000.icon	\
	network-wireless-020.svg	\
	network-wireless-020.icon	\
	network-wireless-040.svg	\
	network-wireless-040.icon	\
	network-wireless-060.svg	\
	network-wireless-060.icon	\
	network-wireless-080.svg	\
	network-wireless-080.icon	\
	network-wireless-100.svg	\
	network-wireless-100.icon	\
	media-flash-sd-mmc.svg		\
	media-flash-usb.svg

EXTRA_DIST = $(icon_DATA)
