iconsize=scalable
category=stock
icondir = $(datadir)/icons/sugar/$(iconsize)/$(category)

icon_DATA =				\
	stock-add.svg			\
	stock-buddy.svg			\
	stock-chat.svg			\
	stock-continue.svg		\
	stock-invite.svg		\
	stock-insert-image.svg		\
	stock-keep.svg		    	\
	stock-missing.svg		\
	stock-remove.svg		\
	stock-share-mesh.svg		\
	stock-zoom-activity.svg		\
	stock-zoom-friends.svg		\
	stock-zoom-home.svg		\
	stock-zoom-mesh.svg		\
	stock-net-wired.svg 		\
	stock-open.svg			\
	stock-save.svg			\
	stock-undo.svg			\
	stock-redo.svg			\
	stock-bold.svg			\
	stock-underline.svg		\
	stock-italic.svg		\
	stock-star.svg

EXTRA_DIST = $(icon_DATA)
