iconsize=scalable
category=activities
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =			\
	activity-abiword.svg	\
	activity-web.svg	\
	activity-chat.svg	\
	activity-memorygame.svg	\
	activity-sketch.svg 	\
	activity-tamtam.svg	\
	activity-terminal.svg	\
	activity-xbook.svg \
	activity-penguintv.svg

EXTRA_DIST = $(icon_DATA)
