iconsize=scalable
category=activities
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =			\
	activity-write.svg	\
	activity-web.svg	\
	activity-chat.svg	\
	activity-memorygame.svg	\
	activity-sketch.svg 	\
	activity-tamtam.svg	\
	activity-terminal.svg	\
	activity-xbook.svg	\
	activity-penguintv.svg	\
	activity-capture.svg	\
	activity-journal.svg

EXTRA_DIST = $(icon_DATA)
