iconsize=scalable
category=device
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =					\
	device-battery-000.svg			\
	device-battery-020.svg			\
	device-battery-040.svg			\
	device-battery-060.svg			\
	device-battery-080.svg			\
	device-battery-100.svg			\
	device-battery.svg			\
	device-network-wireless-000.svg		\
	device-network-wireless-020.svg		\
	device-network-wireless-040.svg		\
	device-network-wireless-060.svg		\
	device-network-wireless-080.svg		\
	device-network-wireless-100.svg		\
	device-network-wireless.svg

EXTRA_DIST = $(icon_DATA)
