iconsize=scalable
category=stock
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =				\
	stock-buddy.svg			\
	stock-chat.svg			\
	stock-close-activity.svg	\
	stock-invite.svg		\
	stock-missing.svg		\
	stock-make-friend.svg		\
	stock-remove-friend.svg		\
	stock-share.svg			\
	stock-zoom-activity.svg		\
	stock-zoom-friends.svg		\
	stock-zoom-home.svg		\
	stock-zoom-mesh.svg

EXTRA_DIST = $(icon_DATA)
