iconsize=scalable
category=stock
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =				\
	stock-add.svg			\
	stock-back.svg			\
	stock-buddy.svg			\
	stock-chat.svg			\
	stock-continue.svg		\
	stock-close.svg			\
	stock-forward.svg		\
	stock-invite.svg		\
	stock-missing.svg		\
	stock-remove.svg		\
	stock-share-mesh.svg		\
	stock-zoom-activity.svg		\
	stock-zoom-friends.svg		\
	stock-zoom-home.svg		\
	stock-zoom-mesh.svg

EXTRA_DIST = $(icon_DATA)
