iconsize=scalable
category=stock
icondir = $(datadir)/icons/olpc/$(iconsize)/$(category)

icon_DATA =				\
	stock-add.svg			\
	stock-back.svg			\
	stock-buddy.svg			\
	stock-chat.svg			\
	stock-continue.svg		\
	stock-close.svg			\
	stock-forward.svg		\
	stock-invite.svg		\
	stock-missing.svg		\
	stock-remove.svg		\
	stock-share-mesh.svg		\
	stock-zoom-activity.svg		\
	stock-zoom-friends.svg		\
	stock-zoom-home.svg		\
	stock-zoom-mesh.svg		\
	stock-net-wired.svg 		\
	stock-net-wireless-00.svg 	\
	stock-net-wireless-01-20.svg 	\
	stock-net-wireless-21-40.svg 	\
	stock-net-wireless-41-60.svg 	\
	stock-net-wireless-61-80.svg 	\
	stock-net-wireless-81-100.svg	\
	stock-open.svg			\
	stock-save.svg			\
	stock-undo.svg			\
	stock-redo.svg			\
	stock-bold.svg			\
	stock-underline.svg		\
	stock-italic.svg		\
	stock-justify-left.svg		\
	stock-justify-center.svg	\
	stock-justify-right.svg	

EXTRA_DIST = $(icon_DATA)
