assets_DATA =				\
	checkbox-unchecked.svg		\
	checkbox-unchecked-selected.svg \
	checkbox-checked.svg		\
	checkbox-checked-selected.svg	\
	radio.svg			\
	radio-selected.svg		\
	radio-active.svg		\
	radio-active-selected.svg	\
	scale-slider.svg		\
	scale-slider-active.svg

assetsdir = $(datadir)/themes/sugar-72/gtk-3.0/assets

EXTRA_DIST = $(assets_DATA)
